# P3-TECPhotos

./: .gitignore  CMakeLists.txt  README.md
docs/doxygen/html/: _data_manager_8h_source.html  _huffman_compression_8h_source.html  _r_a_i_d_8h_source.html  _t_e_c_photos_8h_source.html  annotated.html  annotated_dup.js  class_data_manager-members.html  class_data_manager.html  class_data_manager.js  class_huffman_compression-members.html  class_huffman_compression.html  class_huffman_compression.js  class_r_a_i_d-members.html  class_r_a_i_d.html  class_r_a_i_d.js  class_t_e_c_photos-members.html  class_t_e_c_photos.html  class_t_e_c_photos.js  classes.html  dir_53ff6e473d46d4e442ba5a7ce9f895e3.html  dir_53ff6e473d46d4e442ba5a7ce9f895e3.js  dir_780fd4f1c0140b8a4d128b5f5431d34f.html  dir_780fd4f1c0140b8a4d128b5f5431d34f.js  dir_9c84df62130b51884dc356818c6ad5d1.html  dir_9c84df62130b51884dc356818c6ad5d1.js  dir_e1f527bbab24646dea270c088a66572f.html  dir_e1f527bbab24646dea270c088a66572f.js  files.html  files_dup.js  functions.html  functions_func.html  hierarchy.html  hierarchy.js  index.html  menudata.js  navtreedata.js  navtreeindex0.js  struct_huffman_compression_1_1_node-members.html  struct_huffman_compression_1_1_node.html  struct_huffman_compression_1_1_node.js  (+3 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js
src/: main.cpp
src/Communication/: DataManager.cpp  DataManager.h
src/HuffmanCoding/: HuffmanAlgorithm.cpp  HuffmanAlgorithm.h  HuffmanCompression.cpp  HuffmanCompression.h
src/RAID5/: RAID.cpp  RAID.h
src/UI/: PhotoTEC.cpp  PhotoTEC.h  PhotoTEC.ui  TECPhotos.cpp  TECPhotos.h  TECPhotos.ui
src/UI/Resources/: resources.qrc
